--- a/src/components/Burger.css
+++ b/src/components/Burger.css
@@ -1,17 +1,17 @@
-.burgerDisplay {
+.burger-display {
   height: 290px;
   width: 100%;
   overflow: auto;
 }
-.burgerDisplay p {
+.burger-display p {
   text-align: center;
 }
-.restaurantName {
+.restaurant-name {
   margin-top: 20px;
   text-align: center;
   font-size: 20px;
 }
-.ingredientChoices {
+.ingredient-choices {
   background-color: #f4b46c;
   margin: 30px auto 0;
   display: table;
@@ -21,19 +21,19 @@
   padding: 20px;
   text-align: center;
 }
-.ingredientChoices p  {
+.ingredient-choices p  {
   padding: 0;
   margin: 0;
   font-weight: bold;
   font-size: 18px;
   text-transform: uppercase;
 }
-.ingrBtns {
+.ingr-btns {
   margin: 0 0 20px;
   display: flex;
   justify-content: space-between;
 }
-.ingrBtn {
+.ingr-btn {
   border: 0;
   background-color: #c17116;
   color: #fff;
@@ -42,7 +42,7 @@
   display: table;
   width: 95px;
 }
-.topSide {
+.top-side {
   background-image: url(../assets/top.jpeg);
   background-size: 300px;
   height: 110px;
@@ -51,7 +51,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.bottomSide {
+.bottom-side {
   background-image: url(../assets/bottom.jpeg);
   background-size: 300px;
   height: 60px;
@@ -60,7 +60,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.lettuceSide {
+.lettuce-side {
   background-image: url(../assets/lettuce.jpeg);
   background-size: 300px;
   height: 27px;
@@ -70,7 +70,7 @@
   background-position: center;
   background-position: center;
 }
-.tomatoSide {
+.tomato-side {
   background-image: url(../assets/tomato.jpeg);
   background-size: 300px;
   height: 20px;
@@ -79,7 +79,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.cheeseSide {
+.cheese-side {
   background-image: url(../assets/cheese.jpeg);
   background-size: 300px;
   height: 15px;
@@ -88,7 +88,7 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.meatSide {
+.meat-side {
   background-image: url(../assets/meat.jpeg);
   background-size: 300px;
   height: 49px;
